--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cypress": "^9.5.3",
     "jasmine-core": "^2.2.0",
     "karma": "^6.1.0",
     "karma-chrome-launcher": "^0.1.7",
